# execution-payloads-benchmarks

./: .gitignore  CLAUDE.md  CODEOWNERS  README.md  example-expb.yaml  hatch_build.py  pyproject.toml
.github/workflows/: tests.yml
docs/: USAGE.md
grafana/: dashboard.json
scripts/: tune-stability.sh
src/expb/: __init__.py  _version.py  compress_payloads.py  execute_payloads.py  execute_scenario.py  execute_scenarios.py  generate_payloads.py  send_payloads.py  version.py
src/expb/api/: app.py  auth.py  dependencies.py  metrics.py  worker.py
src/expb/api/db/: engine.py  models.py
src/expb/api/routes/: health.py  runs.py  scenarios.py
src/expb/api/schemas/: runs.py
src/expb/cli/: __init__.py  execute_scenarios.py
src/expb/cli/api/: __init__.py  serve.py  tokens.py
src/expb/cli/version/: __init__.py  _version.py
src/expb/clients/: __init__.py  besu.py  client_config.py  erigon.py  ethrex.py  geth.py  nethermind.py  nimbusel.py  reth.py
src/expb/configs/: defaults.py  exports.py  networks.py  scenarios.py  snapshots.py
src/expb/configs/clients/: __init__.py  besu.py  client_config.py  erigon.py  geth.py  nethermind.py  reth.py
src/expb/logging/: __init__.py
src/expb/networks/: __init__.py
src/expb/payloads/: __init__.py  compressor.py  executor.py  generator.py  k6_script.py
src/expb/payloads/compressor/: __init__.py  compressor.py  compressor_utils.py  utils.py
src/expb/payloads/executor/: __init__.py  executor.py  executor_config.py  exports_utils.py
src/expb/payloads/utils/: cpu.py  engine.py  jwt.py  (+1 more)
src/expb/utils/: __init__.py  lock.py
tests/: conftest.py  test_mem_limit.py  test_networking.py
tests/api/: test_auth.py  test_health.py  test_runs.py  test_scenarios.py
tests/fixtures/: block_with_deposit.json  block_with_withdrawal.json
tests/mock-engine/: Dockerfile  README.md  generate_payloads.py  mock_engine.py
tests/payloads/: test_execution_requests.py  test_field_mapping.py  test_generator_integration.py
(+12 files in other folders)
