[project]
name = "expb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Carlos Bermudez Porto", email = "cbermudez.dev@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.133.0",
    "filelock>=3.24.3",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.46",
    "structlog>=25.4.0",
    "typer>=0.16.0",
    "uvicorn[standard]>=0.41.0",
    "web3>=7.12.0",
]

[project.scripts]
expb = "expb:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel]
packages = ["src/expb"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=9.0.2", "hatchling>=1.29.0"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:websockets", "hatchling>=1.29.0"]
